# cosmos

./: .gitignore  CPP.md  README.md  install_gtest_macos.sh
cosmos/: CMakeLists.txt  Makefile  atomic.h  command.h  coupling_relation.h  entity.h  event.h  main.cc  model.cc  model.h
cosmos/engine/: engine.h  runner.h
example/: README.md
test/: Makefile  function_as_parameter.cc  infinite.cc
